fixed the window oversize

--- a/css/article_styles.css
+++ b/css/article_styles.css
@@ -12,6 +12,23 @@ html {
     padding: 0;
 }
 
+/* 确保容器元素在小屏幕上不超过视口宽度 */
+.article_grid_section,
+.article_grid,
+.article_content,
+.article_text,
+.article_figure {
+    max-width: 100%; /* 确保元素宽度不会超过视口 */
+    box-sizing: border-box; /* 使内边距和边框包含在宽度内 */
+}
+
+.article_img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+}
+
 .dark_mode_container {
     display: flex;
     position: relative;
