--- a/css/article_styles.css
+++ b/css/article_styles.css
@@ -184,9 +184,9 @@ input:checked + .slider:before {
 /* 返回按钮样式 */
 .article_back_to_home {
     position: fixed;
-    bottom: 20px;
+    bottom: 40px;
     right: 20px;
-    background-color: #808080;
+    background-color: #439c47;
     color: white;
     width: 50px;
     height: 50px;
